# OAE

./: .gitignore  .gitmodules  .tool-versions  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: release.yml
apps/_legacy-tauri/oae-stt/: index.html  package-lock.json  package.json
apps/_legacy-tauri/oae-stt/.cargo/: config.toml
apps/_legacy-tauri/oae-stt/src/: App.tsx
apps/_legacy-tauri/oae-stt/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/_legacy-tauri/oae-stt/src-tauri/capabilities/: default.json
apps/_legacy-tauri/oae-stt/src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  utils.rs
apps/_legacy-tauri/oae-stt/src-tauri/src/audio_toolkit/: decode.rs  resample.rs
apps/_legacy-tauri/oae-stt/src-tauri/src/managers/: audio.rs  mod.rs  model_registry.rs  transcription.rs
apps/oae-mac/: project.yml
apps/oae-mac/OAE/: OAEApp.swift  SubtitleFeedCoalescer.swift  SubtitleIslandCompositor.swift  SubtitleIslandGhostCompositor.swift  SubtitleIslandInstrumentation.swift  SubtitleIslandRingViewport.swift  SubtitleLineCadenceController.swift  SubtitleLineCompositor.swift
apps/oae-mac/OAE.xcodeproj/: project.pbxproj
docs/: RELEASING.md  SUBTITLE_ISLAND.md  VERIFY.md  handy-compat.md  versions.md
docs/professor/: README.md  VALIDATION_CHECKLIST.md
scripts/: bootstrap.sh  build-mac.sh  build-whisper-macos.sh  build_dragdrop_dmg.sh  check-handy-models.sh  ci_require_github_release_secrets.sh  ci_setup_macos_signing.sh  demo-smoke.sh  download_default_whisper_model.py  generate-icon.swift  install-oae-macos.sh  install-odi-macos.sh  notarize_dmg.sh  requirements-dmg-ci.txt  reset-tcc.sh  setup-local-postprocess.sh  ship_professor_bundle.sh  verify-env.sh
(+47 files in other folders)
