[package]
name = "oae-stt"
version = "0.1.0"
description = "OAE STT — local Whisper transcription (macOS)"
authors = ["OAE"]
edition = "2021"
license = "MIT"

[lib]
name = "oae_stt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [
  "tray-icon",
  "image-png",
] }
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.6"
tauri-plugin-process = "2.3"
tauri-plugin-macos-permissions = "2.3"
tauri-plugin-os = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
log = "0.4"
dirs = "5"
notify = "6"
cpal = "0.16"
rubato = "0.16"
hound = "3.5"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
specta = { version = "=2.0.0-rc.22", features = ["serde"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
reqwest = { version = "0.12", features = ["blocking"] }
parking_lot = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-single-instance = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3.8", features = ["whisper-cpp", "whisper-metal"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
